[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "resource_intensive: Tests which readily exceed resources such as memory",
    "asyncio: Make async tests to run"
]

[tool.black]
line-length = 99
target_version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"

[tool.mypy]
no_implicit_optional = false  # TODO: PEP484, set to true
strict = false  # TODO: set to true
exclude = ["tests"]

[[tool.mypy.overrides]]
module = "pybind11.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "vertexai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llama_cpp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "litellm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "diskcache.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tokenizers.*"
ignore_missing_imports = true